--- a/unsupervised/01_clustering/05_dbscan.ipynb
+++ b/unsupervised/01_clustering/05_dbscan.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "05_dbscan.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -20,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krakowiakpawel9/machine-learning-bootcamp/blob/master/unsupervised/01_clustering/05_dbscan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/michalastocki/machine-learning-bootcamp/blob/master/unsupervised/01_clustering/05_dbscan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -111,7 +112,7 @@
         "df = pd.DataFrame(data, columns=['x1', 'x2'])\n",
         "px.scatter(df, 'x1', 'x2', width=950, height=500, title='Klasteryzacja', template='plotly_dark')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -201,7 +202,7 @@
         "cluster = DBSCAN(eps=0.5, min_samples=5)\n",
         "cluster.fit(data)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +233,7 @@
       "source": [
         "cluster.labels_[:10]"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +275,7 @@
         "px.scatter(df, 'x1', 'x2', 'cluster', width=950, height=500, title='DBSCAN(eps=0.5, min_samples=5)', \n",
         "           template='plotly_dark', color_continuous_midpoint=0)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -356,7 +357,7 @@
         "px.scatter(df, 'x1', 'x2', 'cluster', width=950, height=500, title='DBSCAN(eps=0.5, min_samples=7)',\n",
         "           template='plotly_dark')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +438,7 @@
         "df['cluster'] = cluster.labels_\n",
         "px.scatter(df, 'x1', 'x2', 'cluster', width=950, height=500, title='DBSCAN(eps=0.7, min_samples=5)', template='plotly_dark')"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -526,7 +527,7 @@
         "df = pd.DataFrame(data, columns=['x1', 'x2'])\n",
         "px.scatter(df, 'x1', 'x2', width=950, height=500, title='DBSCAN', template='plotly_dark')"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -607,7 +608,7 @@
         "df['cluster'] = cluster.labels_\n",
         "px.scatter(df, 'x1', 'x2', 'cluster', width=950, height=500, title='DBSCAN(eps=0.5, min_samples=5)', template='plotly_dark')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -675,16 +676,16 @@
       "metadata": {
         "id": "IaA0QImcp6Jk",
         "colab_type": "code",
+        "outputId": "d8a085f4-0b73-494a-c506-31cf9555f7f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "d8a085f4-0b73-494a-c506-31cf9555f7f0"
+        }
       },
       "source": [
         "df.cluster.value_counts()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +739,7 @@
         "df['cluster'] = cluster.labels_\n",
         "px.scatter(df, 'x1', 'x2', 'cluster', width=950, height=500, title='DBSCAN(eps=0.8, min_samples=5)', template='plotly_dark')"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -819,7 +820,7 @@
         "df['cluster'] = cluster.labels_\n",
         "px.scatter(df, 'x1', 'x2', 'cluster', width=950, height=500, title='DBSCAN(eps=0.6, min_samples=6)', template='plotly_dark')"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
